crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-federated_clickbench_q25_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q25"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                       |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.SearchPhrase                                                                                                                                                                                                                                                                                                                              |
|               |   Sort: to_timestamp(hits.EventTime) ASC NULLS LAST, fetch=10                                                                                                                                                                                                                                                                                              |
|               |     Projection: hits.SearchPhrase, hits.EventTime                                                                                                                                                                                                                                                                                                          |
|               |       Filter: hits.SearchPhrase != LargeUtf8("")                                                                                                                                                                                                                                                                                                           |
|               |         TableScan: hits projection=[EventTime, SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]                                                                                                                                                                                                                                         |
| physical_plan | ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase]                                                                                                                                                                                                                                                                                                      |
|               |   SortPreservingMergeExec: [to_timestamp(EventTime@1) ASC NULLS LAST], fetch=10                                                                                                                                                                                                                                                                            |
|               |     SortExec: TopK(fetch=10), expr=[to_timestamp(EventTime@1) ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                   |
|               |         DataSourceExec: file_groups={32 groups: [<redacted>]}, projection=[SearchPhrase, EventTime], file_type=parquet, predicate=SearchPhrase@39 !=  AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=SearchPhrase_null_count@2 != row_count@3 AND (SearchPhrase_min@0 !=  OR  != SearchPhrase_max@1), required_guarantees=[N] |
|               |                                                                                                                                                                                                                                                                                                                                                            |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
