crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-federated_clickbench_q26_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q26"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: hits.SearchPhrase ASC NULLS LAST, fetch=10                                                                                                                                                                                                                                                                                                                                                      |
|               |   Filter: hits.SearchPhrase != LargeUtf8("")                                                                                                                                                                                                                                                                                                                                                          |
|               |     TableScan: hits projection=[SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]                                                                                                                                                                                                                                                                                                   |
| physical_plan | SortPreservingMergeExec: [SearchPhrase@0 ASC NULLS LAST], fetch=10                                                                                                                                                                                                                                                                                                                                    |
|               |   SortExec: TopK(fetch=10), expr=[SearchPhrase@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                        |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                |
|               |       DataSourceExec: file_groups={32 groups: [<redacted>]}, projection=[SearchPhrase], file_type=parquet, predicate=SearchPhrase@39 !=  AND DynamicFilter [ empty ], sort_order_for_reorder=[SearchPhrase@0 ASC NULLS LAST], dynamic_rg_pruning=eligible, pruning_predicate=SearchPhrase_null_count@2 != row_count@3 AND (SearchPhrase_min@0 !=  OR  != SearchPhrase_max@1), required_guarantees=[N] |
|               |                                                                                                                                                                                                                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
